# zmq.algebraiceffect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-info.json
.github/workflows/: build.yml
cmake/: zmqae_external.cmake
help/: zmqae.handler.maxhelp  zmqae.performer.maxhelp
source/projects/zmq.handler/: CMakeLists.txt  zmq.handler.cpp
source/projects/zmq.performer/: CMakeLists.txt  zmq.performer.cpp
source/projects/zmqae.handler/: zmqae.handler.cpp
source/projects/zmqae.performer/: zmqae.performer.cpp
